@@ -502,111 +502,6 @@ public:
     }
     //@}
 
-private:
-    //! Get the location of the point \p x.
-    template<typename T>
-    static double location(T x) {
-        return x;
-    }
-    //! Set \p x to \p y.
-    template<typename T>
-    static void setLocation(T& x, double y) {
-        x = static_cast<T>(y);
-    }
-    //! Get a writable location of the point \p x.
-    template<typename T>
-    static double
-    location(const typename CBasicStatistics::SSampleMean<T>::TAccumulator& x) {
-        return CBasicStatistics::mean(x);
-    }
-    //! Set the mean of \p x to \p y.
-    template<typename T>
-    static void
-    setLocation(typename CBasicStatistics::SSampleMean<T>::TAccumulator& x, double y) {
-        x.s_Moments[0] = static_cast<T>(y);
-    }
-
-    //! \brief Utility class to represent points which are adjacent
-    //! in the spreading algorithm.
-    class MATHS_EXPORT CGroup {
-    public:
-        using TMeanAccumulator = CBasicStatistics::SSampleMean<double>::TAccumulator;
-
-    public:
-        //! Create a new points group.
-        template<typename T>
-        CGroup(std::size_t index, const T& points)
-            : m_A(index), m_B(index), m_Centre() {
-            m_Centre.add(location(points[index]));
-        }
-
-        //! Merge this group and \p other group.
-        void merge(const CGroup& other, double separation, double min, double max);
-
-        //! Check if this group and \p other group overlap.
-        bool overlap(const CGroup& other, double separation) const;
-
-        //! Update the locations of the points in this group based
-        //! on its centre position.
-        template<typename T>
-        bool spread(double separation, T& points) const {
-            if (m_A == m_B) {
-                return false;
-            }
-            bool result = false;
-            double x = this->leftEndpoint(separation);
-            for (std::size_t i = m_A; i <= m_B; ++i, x += separation) {
-                if (location(points[i]) != x) {
-                    setLocation(points[i], x);
-                    result = true;
-                }
-            }
-            return result;
-        }
-
-    private:
-        //! Get the position of the left end point of this group.
-        double leftEndpoint(double separation) const;
-
-        //! Get the position of the right end point of this group.
-        double rightEndpoint(double separation) const;
-
-        std::size_t m_A;
-        std::size_t m_B;
-        TMeanAccumulator m_Centre;
-    };
-
-    //! \brief Orders two points by their position.
-    class CPointLess {
-    public:
-        template<typename T>
-        bool operator()(const T& lhs, const T& rhs) const {
-            return location(lhs) < location(rhs);
-        }
-    };
-
-public:
-    //! \brief Ensure the points are at least \p separation apart.\n\n
-    //! This solves the problem of finding the new positions for the
-    //! points \f$\{x_i\}\f$ such that there is no pair of points for
-    //! which \f$\left \|x_j - x_i \right \| < s\f$ where \f$s\f$
-    //! denotes the minimum separation \p separation and the total
-    //! square distance the points move, i.e.
-    //! <pre class="fragment">
-    //!   \f$ \sum_i{(x_i' - x_i)^2} \f$
-    //! </pre>
-    //! is minimized.
-    //!
-    //! \param[in] a The left end point of the interval containing
-    //! the shifted points.
-    //! \param[in] b The right end point of the interval containing
-    //! the shifted points.
-    //! \param[in] separation The minimum permitted separation between
-    //! points.
-    //! \param[in,out] points The points to spread.
-    template<typename T>
-    static void spread(double a, double b, double separation, T& points);
-
     //! Compute the sign of \p x and return T(-1) if it is negative and T(1)
     //! otherwise.
     //!
