@@ -1065,61 +1065,6 @@ BOOST_AUTO_TEST_CASE(testAnomalyScore) {
     }
 }
 
-BOOST_AUTO_TEST_CASE(testSpread) {
-    double period = 86400.0;
-    {
-        double raw[] = {15.0,    120.0,   4500.0,  9000.0, 25700.0,
-                        43100.0, 73000.0, 74000.0, 84300.0};
-        double separation = 20.0;
-        TDoubleVec points(std::begin(raw), std::end(raw));
-        std::string expected = core::CContainerPrinter::print(points);
-        CTools::spread(0.0, period, separation, points);
-        BOOST_REQUIRE_EQUAL(expected, core::CContainerPrinter::print(points));
-        separation = 200.0;
-        expected = "[0, 200, 4500, 9000, 25700, 43100, 73000, 74000, 84300]";
-        CTools::spread(0.0, period, separation, points);
-        LOG_DEBUG(<< "spread = " << core::CContainerPrinter::print(points));
-        BOOST_REQUIRE_EQUAL(expected, core::CContainerPrinter::print(points));
-    }
-    {
-        double raw[] = {150.0,   170.0,   4500.0,  4650.0,  4700.0,  4800.0,
-                        73000.0, 73150.0, 73500.0, 73600.0, 73800.0, 74000.0};
-        double separation = 126.0;
-        std::string expected = "[97, 223, 4473.5, 4599.5, 4725.5, 4851.5, 73000, 73150, 73487, 73613, 73800, 74000]";
-        TDoubleVec points(std::begin(raw), std::end(raw));
-        CTools::spread(0.0, period, separation, points);
-        LOG_DEBUG(<< "spread = " << core::CContainerPrinter::print(points));
-        BOOST_REQUIRE_EQUAL(expected, core::CContainerPrinter::print(points));
-    }
-    {
-        CRandomNumbers rng;
-        for (std::size_t i = 0u; i < 100; ++i) {
-            TDoubleVec origSamples;
-            rng.generateUniformSamples(1000.0, static_cast<double>(period) - 1000.0,
-                                       100, origSamples);
-            TDoubleVec samples(origSamples);
-            CTools::spread(0.0, period, 150.0, samples);
-
-            std::sort(origSamples.begin(), origSamples.end());
-            double eps = 1e-3;
-            double dcost = (samples[0] + eps - origSamples[0]) *
-                               (samples[0] + eps - origSamples[0]) -
-                           (samples[0] - eps - origSamples[0]) *
-                               (samples[0] - eps - origSamples[0]);
-            for (std::size_t j = 1u; j < samples.size(); ++j) {
-                BOOST_TEST_REQUIRE(samples[j] - samples[j - 1] >= 150.0 - eps);
-                dcost += (samples[j] + eps - origSamples[j]) *
-                             (samples[j] + eps - origSamples[j]) -
-                         (samples[j] - eps - origSamples[j]) *
-                             (samples[j] - eps - origSamples[j]);
-            }
-            dcost /= 2.0 * eps;
-            LOG_DEBUG(<< "d(cost)/dx = " << dcost);
-            BOOST_TEST_REQUIRE(std::fabs(dcost) < 2e-6);
-        }
-    }
-}
-
 BOOST_AUTO_TEST_CASE(testFastLog) {
     test::CRandomNumbers rng;
 
